# smu-huffman

./: Cargo.toml
src/: lib.rs  main.rs
tests/: property_tests.rs
