[package]
name = "smu-huffman"
version = "0.1.0"
authors = ["CAD97 <cad97@cad97.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.17.2"
log = "0.4.8"
arr_macro = "0.1.3"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
proptest = "0.9.5"
