[package]
name = "smu-huffman"
version = "1.0.0"
edition = "2018"

authors = ["Christopher Durham (CAD97) <cad97@cad97.com>"]

[dependencies]
bitvec = "0.17.2"           # license: MIT, by myrrlyn
log = "0.4.8"               # license: MIT OR Apache-2.0, by The Rust Project Developers
arr_macro = "0.1.3"         # license: MIT OR Apache-2.0, by Josh Mcguigan

[dev-dependencies]
quickcheck = "0.9.2"        # license: Unlicense/MIT, by Andrew Gallant
quickcheck_macros = "0.9.1" # license: Unlicense/MIT, by Andrew Gallant
proptest = "0.9.5"          # license: MIT/Apache-2.0, by Jason Lingle
